docs(website): Fix color for links in banner
The default link color matches the background color of the banner which
makes links invisible, so use the same color as normal text for links
but make them bold.

--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -10,6 +10,11 @@
   overflow: hidden;
 }
 
+.heroBanner a {
+  color: var(--ifm-hero-text-color);
+  font-weight: bold;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
